# LACE

./: .gitignore  README.md  cond_eigs.m  conditon_estimation_NAPACK.m  conditon_estimation_sparse_NAPACK.m  diagbcsr_scaling_condest.m  example_01.cpp  example_02.cpp  log_test_solve_FGMRES_30p30n.txt  log_test_solve_FGMRES_30p30n_omp8.txt  make.inc.ACF  make.inc.Mac  make.inc.gnu  make.inc.gpu  makefile  makefile.gpu  makefile_autodepend  makefile_autodepend_KNL  makefile_autodepend_encapsulation  makefile_beacon  makefile_gpu  plot_eigs.m  post_iLU.cpp  run_solver_cpu_sweep_01.sh  run_solver_fill_cpu_sweep_01.sh  run_solver_sweep_01.sh  setenv  sparse_viz.m  test_LU.cpp  test_LU_larnv.cpp  test_LU_operations.cpp  test_MKL_LU.cpp  test_MKL_LU_larnv.cpp  test_MKL_iLU.cpp  test_MKL_iLU0_FGMRES.cpp  test_blockspmatrix_operations.cpp  test_dense_inverse.cpp  test_dense_trisolve.cpp  test_extract_diag.cpp  test_householder.cpp  (+25 more)
Orthogonalization/: compare.m  demo_gmres.m  gmres_orthog_est.m  gs.m  housegen.m  hqrd.m
blas/: zaxpy.cpp  zbcsrmultbcsr.cpp  zcsrilu0.cpp  zdiff.cpp  zdomatadd.cpp  zdot.cpp  zgemm.cpp  zgemv.cpp  zlunp.cpp  zspmm.cpp  zspmv.cpp
control/: constants.cpp  extract_diag.cpp  init.cpp  magma_zfree.cpp  magma_zmatrixchar.cpp  magma_zmconverter.cpp  magma_zmio.cpp  magma_zmlumerge.cpp  magma_zmscale.cpp  magma_zmtranspose.cpp  mmio.cpp  norms.cpp  sparse_sub.cpp  sparse_tilepattern.cpp
drivers/: PariLU_KNL.sh  PariLU_P100.sh  PariLU_skylake.sh  PariLU_testMatrices.sh  PariLU_testMatrix.sh  (+7 more)
matrixClassSketch/: CMakeLists.txt  matrix.hpp  test_matrix.cpp
(+130 files in other folders)
